# csi1430-The-Byte-Brigade-

./: CMakeLists.txt  README DR BOOTH_INSTRUCTIONS.txt
c++_project/: Game.cpp  Game.h  GameEvents.cpp  GameEvents.h  SDLExample2.cpp  SDL_Plotter.h  a.out  config.h  grid.cpp  grid.h  mac_people.txt  main.cpp  square.cpp  square.h  windows_people.txt
c++_project/Entites/Headers/: Human.h  HumanFunc.h  Mammoth.h  MamothFunc.h  TigerFunc.h  WorldGeneration.h  cropFunc.h
c++_project/Entites/Src/: Human.cpp  HumanFunc.cpp  Mammoth.cpp  MamothFunc.cpp  TigerFunc.cpp  WorldGeneration.cpp  cropFunc.cpp
c++_project/PLOTTER/: SDL_Plotter.h
